--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <div class="col-10">
             <a href="" id="likeid" class="text-decoration-none">
               <div class="row">
-                  <div class="col-lg-2">
+                  <div class="col-md-2">
                     <img src="" id="imageid" width="70px" class="table-responsive">
                   </div>
                     <div class="col-md-8 p-0">
@@ -82,7 +82,7 @@
                 </div>
               </a>
           </div>
-          <div class="col-1">
+          <div class="col-md-1">
               <p id="yearid"></p>
           </div>
       </div>
